# srcstrafe

./: .gitignore  bench.bash  meson.build  meson_options.txt  test.bash
bench/: bench.cpp  meson.build
fuzzer/: main.cpp  meson.build  tester_main.cpp
include/: printers.hpp  strafe.hpp  strafe_utils.hpp
include/srcstrafe/: entity.hpp  gamemovement.h  printers.hpp  shareddefs.h  strafe.hpp  strafe_utils.h  surface.hpp  vector.hpp
src/: gamemovement.cpp  mathlib.cpp  meson.build  printers.cpp  simulate.cpp  strafe.cpp  strafe_utils.cpp  strafestuff.hpp  surface.cpp
src/source/: bspflags.h  const.h  gamemovement.cpp  gamemovement.h  in_buttons.h  shareddefs.h
subprojects/: .gitignore
test/: meson.build  strafe_utils.cpp  testcases.cpp
testcases/: portal.txt
tools/: meson.build
tools/srcstrafe_gnuplot/: main.cpp  meson.build
